# disorder-screening-agent

./: .env.example  .gitignore  Disorder_Aware_Dopant_Screening_Project_Report.md  __main__.py  colab_ceo2.ipynb  colab_disorder_eval.ipynb  colab_lco.ipynb  colab_lco_b.ipynb  colab_lmo.ipynb  colab_lnmo_eval.ipynb  colab_lno.ipynb  colab_nmc_rerun.ipynb  colab_nmc_smoketest.ipynb  colab_production.ipynb  colab_sto.ipynb  kaggle_disorder_eval.ipynb  pyproject.toml  pytest.ini  requirements.txt
ceo2/: CeO2_fluorite_Al.json  CeO2_fluorite_Ba.json  CeO2_fluorite_Ca.json  CeO2_fluorite_Co.json  CeO2_fluorite_Cr.json  CeO2_fluorite_Cu.json  CeO2_fluorite_Fe.json  CeO2_fluorite_Gd.json  CeO2_fluorite_Hf.json  CeO2_fluorite_La.json  CeO2_fluorite_Mg.json  CeO2_fluorite_Mn.json  CeO2_fluorite_Nd.json  CeO2_fluorite_Ni.json  CeO2_fluorite_Pr.json  CeO2_fluorite_Sm.json  CeO2_fluorite_Sr.json  CeO2_fluorite_Ti.json  CeO2_fluorite_Y.json  CeO2_fluorite_Zr.json
config/: pipeline.yaml  pipeline_444.yaml  pipeline_lnmo.yaml  pipeline_srtio3.yaml
data/: element_costs.json  element_metadata.json  element_prices.csv  shannon_radii.json
db/: local_store.py  models.py
docs/: pitch_chemistry_head.md  pitch_executive_summary.md
evaluation/: EXPERIMENT_DESIGN_v2.md  PLANNED_CHANGES.md  ablation.py  eval_accuracy.py  eval_disorder.py  eval_pruning.py  figures.py  ground_truth_loader.py  paper_draft_notes.md  threshold_sweep.py
graph/: entry_points.py  graph.py  state.py
lco/: LiCoO2_layered_Al.json  LiCoO2_layered_Cr.json  LiCoO2_layered_Cu.json  LiCoO2_layered_Fe.json  (+17 more)
(+190 files in other folders)
